--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -113,7 +113,7 @@
     width: 32px;
     height: 32px;
 
-    transform: translateX(0);
+    transform: translateX(205px);
     border-radius: 50%;
   }
 
@@ -156,5 +156,6 @@
 
   .slider__toggle-wrapper {
     margin-bottom: 0;
+    margin-right: 0;
   }
 }
