Добавленые декоративые адаптивные элементы

--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -7,7 +7,7 @@
 
 .page-header__logo {
   width: 100%;
-  margin-top: 10px;
+  padding-top: 10px;
   padding-bottom: 15px;
   border-bottom: 1px solid @line-gray;
 }
