--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -29,6 +29,7 @@
 .page-main__title {
   width: 280px;
   margin: 0 auto;
+  margin-top: 25px;
   margin-bottom: 30px;
 }
 
@@ -38,7 +39,7 @@
   }
 
   .page-main__container {
-    width: 710px;
+    width: 708px;
   }
 
   .page-main__additional {
@@ -51,14 +52,13 @@
   }
 
   .page-main__title {
-    width: 708px;
-    margin: 0 auto;
+    width: auto;
+    margin-left: 30px;
     margin-bottom: 45px;
   }
 
-  .page-main__form {
-    margin: 0 auto;
-    width: 635px;
+  .page-main__catalog {
+    margin-bottom: 70px;
   }
 }
 
