--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -51,7 +51,7 @@
   background-color: @light-green;
 }
 
-@media (max-width: @table-width) {
+@media (max-width: @table-width - 1) {
   .site-list {
     height: 0;
     transform: translateY(-100px);
