--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -1,7 +1,8 @@
 .additional__title {
   position: relative;
-  padding-bottom: 25px;
-  border-bottom: 1px solid @line-gray;
+  width: 280px;
+  margin: 0 auto;
+  margin-bottom: 25px;
 }
 
 .additional__title--line::before {
@@ -19,6 +20,7 @@
 .additional__list {
   margin: 0;
   padding: 0;
+  margin-bottom: 40px;
 
   list-style: none;
 }
@@ -26,6 +28,10 @@
 .additional__item {
   padding: 15px 0 20px;
   border-bottom: 1px solid @line-gray;
+}
+
+.additional__item:first-child {
+  border-top: 1px solid @line-gray;
 }
 
 .additional__name {
@@ -95,12 +101,39 @@
 }
 
 @media (min-width: @table-width) {
+  .additional {
+    position: relative;
+  }
+
+  .additional::after {
+    content: "";
+    position: absolute;
+    top: 20px;
+    left: 0;
+
+    width: 100%;
+    height: 3px;
+    background-color: @light-green;
+    z-index: -1;
+  }
+
   .additional-wrapper {
     margin-bottom: 70px;
   }
 
   .additional__title {
-    padding-bottom: 70px;
+    position: relative;
+    width: 410px;
+    margin: 0;
+    padding: 0;
+    margin-left: 30px;
+    margin-bottom: 70px;
+    background: #ffffff;
+    text-align: center;
+  }
+
+  .additional__title--line::before {
+    display: none;
   }
 
   .additional__name {
@@ -115,11 +148,17 @@
     line-height: 20px;
   }
 
+  .additional__list {
+    margin-bottom: 70px;
+  }
+
   .additional__item {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    padding: 25px 0;
+    padding: 25px 40px;
+    border-left: 1px solid @line-gray;
+    border-right: 1px solid @line-gray;
   }
 
   .additional__value {
@@ -128,10 +167,6 @@
 
   .additional__button {
     width: 100%;
-  }
-
-  .additional__title--line::before {
-    display: none;
   }
 
   .additional__gift {
@@ -165,6 +200,7 @@
 
   .additional__list {
     width: 895px;
+    margin-bottom: 0;
   }
 
   .additional__gift {
@@ -188,6 +224,8 @@
 
   .additional__item {
     padding: 15px 0;
+    border-left: none;
+    border-right: none;
   }
 
   .additional__button {
@@ -204,9 +242,5 @@
   .additional__description {
     margin-bottom: 0;
     margin-right: 40px;
-  }
-
-  .additional__title {
-    width: 895px;
   }
 }
