--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -11,6 +11,10 @@
   border-bottom: 1px solid @line-gray;
 }
 
+.catalog__item:first-child {
+  border-top: 1px solid @line-gray;
+}
+
 .catalog__more {
   width: 280px;
   margin: 0 auto;
