--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -19,6 +19,7 @@
 }
 
 .form__label {
+  position: relative;
   display: flex;
   align-items: center;
   .oswald-font-m(16px, 18px);
@@ -41,12 +42,32 @@
   box-sizing: border-box;
 }
 
-.form__label--radio {
-  justify-content: flex-start;
+.form__text[type="email"],
+.form__text[type="tel"] {
+  position: relative;
+  padding-right: 45px;
 }
 
-.form__radio {
-  margin-right: 15px;
+.form__label--email::after {
+  content: "";
+  position: absolute;
+  top: 17px;
+  right: 15px;
+  width: 17px;
+  height: 13px;
+
+  background: url("../img/icon-mail.svg") no-repeat 0 0;
+}
+
+.form__label--tel::after {
+  content: "";
+  position: absolute;
+  top: 13px;
+  right: 13px;
+  width: 20px;
+  height: 20px;
+
+  background: url("../img/icon-phone.svg") no-repeat 0 0;
 }
 
 .form__checkbox {
@@ -58,6 +79,23 @@
   padding: 0;
   margin-bottom: 30px;
   border: none;
+}
+
+.form--line::before {
+  content: "";
+  position: absolute;
+  top: -40px;
+  right: 0;
+
+  width: 100%;
+  height: 3px;
+
+  background-color: @light-green;
+  z-index: -1;
+}
+
+.form--line-t::before {
+  top: -65px;
 }
 
 .form__info {
@@ -72,30 +110,94 @@
   border-top: 1px solid @line-gray;
 }
 
-.form__type .form__label {
+.form__label--radio {
+  position: relative;
+  justify-content: flex-start;
   padding: 8px 0 3px;
+  padding-left: 45px;
+}
+
+.form__label--radio::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 28px;
+  height: 28px;
+
+  border: 1px solid @line-gray;
+  border-radius: 50%;
+}
+
+.form__radio:checked ~ .form__label--radio::before {
+  content: "";
+  position: absolute;
+  top: 9px;
+  left: 9px;
+
+  width: 12px;
+  height: 12px;
+
+  background-color: @light-green;
+  border-radius: 50%;
 }
 
 .form__contact {
+  position: relative;
   .form-fieldset();
 }
 
 .form__comment {
+  position: relative;
   .form-fieldset();
 }
 
 .form__add {
+  position: relative;
   .form-fieldset();
 }
 
 .form__add .form__label {
+  position: relative;
   padding: 7px 0 4px;
+  padding-left: 47px;
+}
+
+.form__label--checkbox::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 28px;
+  height: 28px;
+
+  border: 1px solid @line-gray;
+}
+
+.form__checkbox:checked ~ .form__label--checkbox::before {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 7px;
+
+  width: 16px;
+  height: 7px;
+
+  border: 2px solid @light-green;
+  border-top: none;
+  border-right: none;
+  transform: rotate(-45deg);
 }
 
 .form__subtitle {
+  position: relative;
   margin-bottom: 30px;
-  padding-left: 20px;
-  width: 280px;
+  padding: 0 20px;
+  width: auto;
+
+  background-color: #ffffff;
 }
 
 .form__text-area {
@@ -134,13 +236,17 @@
 @media (min-width: @table-width) {
   .form__subtitle {
     width: auto;
-    padding: 0;
+    padding: 0 40px;
+    margin-left: 30px;
     margin-bottom: 70px;
+    text-align: center;
   }
 
   .form__title {
+    margin: 0;
+    margin-left: 70px;
     margin-bottom: 65px;
-    width: auto;
+    width: 345px;
     font-size: 20px;
     line-height: 30px;
   }
@@ -167,17 +273,33 @@
   }
 
   .form__info {
+    margin: 0 40px;
     margin-bottom: 70px;
   }
 
   .form__type {
     padding: 25px;
+    margin: 0 40px;
     margin-bottom: 80px;
     border: 1px solid @line-gray;
   }
 
-  .form__type .form__label {
+  .form__label--radio {
     padding: 10px 0 7px;
+    padding-left: 60px;
+  }
+
+  .form__label--radio::after {
+    width: 38px;
+    height: 38px;
+  }
+
+  .form__radio:checked ~ .form__label--radio::before {
+    top: 11px;
+    left: 11px;
+
+    width: 18px;
+    height: 18px;
   }
 
   .form__type .form__item:not(:last-child) {
@@ -188,28 +310,48 @@
     margin-bottom: 65px;
   }
 
+  .form__contact .form__label {
+    margin: 0 40px;
+  }
+
   .form__comment {
     margin-bottom: 65px;
   }
 
+  .form__comment .form__container {
+    margin: 0 70px;
+  }
+
   .form__add {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     margin-bottom: 55px;
   }
 
   .form__add .form__item {
-    width: 285px;
+    margin: 0;
     margin-bottom: 30px;
+    width: 285px;
   }
 
   .form__add .form__item:nth-child(2n) {
     margin-right: 60px;
+    margin-left: 70px;
   }
 
   .form__add .form__label {
     padding: 10px 0 7px;
+    padding-left: 60px;
+  }
+
+  .form__label--checkbox::after {
+    width: 38px;
+    height: 38px;
+  }
+
+  .form__checkbox:checked ~ .form__label--checkbox::before {
+    top: 12px;
+    left: 12px;
   }
 
   .form__explanation {
@@ -225,6 +367,20 @@
     flex-direction: row;
     justify-content: flex-start;
     margin-bottom: 70px;
+    margin-left: 70px;
+  }
+
+  .form--line::before {
+    top: -85px;
+  }
+
+  .form__container {
+    margin: 0 30px;
+    width: auto;
+  }
+
+  br {
+    display: none;
   }
 }
 
@@ -265,7 +421,6 @@
   .form__add .form__item {
     margin: 0;
     margin-bottom: 30px;
-    margin-right: 80px;
     width: 245px;
   }
 
