Исправлены недочеты в декоративных элементах на всех страницах

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -60,6 +60,10 @@
   .page-main__catalog {
     margin-bottom: 70px;
   }
+
+  .page-main__form {
+    margin-bottom: 75px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -85,5 +89,6 @@
 
   .page-main__form {
     width: 1220px;
+    margin-bottom: 80px;
   }
 }
