--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -96,12 +96,12 @@
     position: relative;
     display: flex;
     align-items: center;
-    margin: 0 25px;
     width: 430px;
     height: 5px;
 
     background-color: #dcdcdc;
     border-radius: 2px;
+    box-sizing: border-box;
   }
 
   .slider__toggle {
