--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -81,11 +81,15 @@
   border: none;
 }
 
+.form--line {
+  position: relative;
+}
+
 .form--line::before {
   content: "";
-  position: absolute;
+  display: block;
+  position: relative;
   top: -40px;
-  right: 0;
 
   width: 100%;
   height: 3px;
@@ -225,22 +229,18 @@
   text-align: center;
 }
 
-.form__wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 30px;
-}
-
 @media (min-width: @table-width) {
   .form__subtitle {
     width: auto;
     padding: 0 40px;
     margin-left: 30px;
     margin-bottom: 70px;
-    text-align: center;
   }
+
+  .form--line::before {
+    top: -85px;
+  }
+
 
   .form__title {
     margin: 0;
@@ -322,23 +322,6 @@
     margin: 0 70px;
   }
 
-  .form__add {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 55px;
-  }
-
-  .form__add .form__item {
-    margin: 0;
-    margin-bottom: 30px;
-    width: 285px;
-  }
-
-  .form__add .form__item:nth-child(2n) {
-    margin-right: 60px;
-    margin-left: 70px;
-  }
-
   .form__add .form__label {
     padding: 10px 0 7px;
     padding-left: 60px;
@@ -355,28 +338,40 @@
   }
 
   .form__explanation {
+    width: 200px;
     font-size: 16px;
   }
 
   .form__submit {
     margin: 0;
     margin-right: 60px;
-  }
-
-  .form__wrapper {
-    flex-direction: row;
-    justify-content: flex-start;
-    margin-bottom: 70px;
-    margin-left: 70px;
-  }
-
-  .form--line::before {
-    top: -85px;
+    // margin-left: 70px;
   }
 
   .form__container {
     margin: 0 30px;
     width: auto;
+  }
+
+  .form__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    width: 635px;
+    margin-left: 70px;
+  }
+
+  .form__add .form__item {
+    margin: 0;
+    padding: 0;
+    width: 245px;
+  }
+
+  .form__add .form__item:nth-child(odd) {
+    margin-right: 100px;
+  }
+
+  .form__add .form__item:first-child {
+    margin-bottom: 35px;
   }
 
   br {
@@ -410,26 +405,18 @@
     box-sizing: border-box;
   }
 
-  .form__add {
-    margin-bottom: 60px;
-  }
-
-  .form__add .form__subtitle {
-    margin-bottom: 50px;
-  }
-
-  .form__add .form__item {
-    margin: 0;
-    margin-bottom: 30px;
-    width: 245px;
-  }
-
-  .form__add .form__item:last-child {
-    margin-right: 0;
-  }
-
   .form__submit {
     width: 570px;
     margin-right: 80px;
+  }
+
+  .form__wrapper {
+    width: 1220px;
+    margin-bottom: 60px;
+  }
+
+  .form__add .form__item:not(:last-child) {
+    margin-right: 80px;
+    margin-bottom: 0;
   }
 }
