фикс ошибок в js и перестройка сетки

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -383,6 +383,8 @@
   .form__container {
     display: flex;
     justify-content: space-between;
+    width: 1220px;
+    margin: 0 auto;
   }
 
   .form__contact .form__item {
@@ -391,17 +393,42 @@
     width: 570px;
   }
 
-  .form__subtitle {
-    margin-bottom: 65px;
+  .form__info {
+    margin: 0;
+    margin-bottom: 70px;
+    width: 570px;
   }
 
-  .form__info {
-    width: 570px;
+  .form__contact .form__label {
+    margin: 0;
+  }
+
+  .form__comment .form__container {
+    margin: 0 auto;
+  }
+
+  .form__title {
+    margin: 0 auto;
+    margin-bottom: 65px;
+    width: 1220px;
+  }
+
+  .form__title br {
+    display: block;
+  }
+
+  .form__subtitle {
+    width: auto;
+    padding: 0 40px;
+    margin: 0 70px;
+    margin-bottom: 65px;
   }
 
   .form__type {
     width: 570px;
-    padding: 25px;
+    margin: 0;
+    margin-bottom: 80px;
+    padding: 21px;
     box-sizing: border-box;
   }
 
@@ -412,6 +439,7 @@
 
   .form__wrapper {
     width: 1220px;
+    margin: 0 auto;
     margin-bottom: 60px;
   }
 
