--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -23,7 +23,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 25px 30px;
+    margin: 0 30px;
+    margin-top: 25px;
+    margin-bottom: 60px;
   }
 
   .page-header__logo {
@@ -36,9 +38,10 @@
 
 @media (min-width: @desktop-width) {
   .page-header__wrapper {
-    padding: 55px 110px;
     margin: 0 auto;
-    max-width: 1220px;
+    margin-top: 55px;
+    margin-bottom: 75px;
+    width: 1220px;
   }
 
   .page-header {
