--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -71,10 +71,6 @@
     width: 1220px;
   }
 
-  .page-main__title {
-    width: 1220px;
-  }
-
   .page-main__product-banner {
     margin-bottom: 270px;
   }
@@ -88,7 +84,13 @@
   }
 
   .page-main__form {
-    width: 1220px;
+    margin: 0 auto;
     margin-bottom: 80px;
+  }
+
+  .page-main__title {
+    width: 1220px;
+    margin: 0 auto;
+    margin-bottom: 45px;
   }
 }
