--- a/source/less/blocks/product-banner.less
+++ b/source/less/blocks/product-banner.less
@@ -111,7 +111,7 @@
   .product-banner::before {
     display: block;
     position: absolute;
-    top: 0;
+    top: -55px;
     right: 0;
 
     width: 50vw;
