Добавление Адаптивной графика плюс ретинизация

--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -68,6 +68,11 @@
   width: 280px;
   height: 290px;
   background: url("../img/gift-photo-mobile@1x.jpg") no-repeat 0 0;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/gift-photo-mobile@2x.jpg");
+    background-size: 280px auto;
+  }
 }
 
 .additional__gift-description {
@@ -176,6 +181,11 @@
     width: 100%;
     height: 200px;
     background: url("../img/gift-photo-tablet@1x.jpg") no-repeat 0 0;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/gift-photo-tablet@2x.jpg");
+      background-size: 708px auto;
+    }
   }
 
   .additional__gift-description {
@@ -208,6 +218,11 @@
     height: 290px;
 
     background: url("../img/gift-photo-desktop@1x.jpg") no-repeat 0 0;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/gift-photo-desktop@2x.jpg");
+      background-size: 245px auto;
+    }
   }
 
   .additional__gift-description {
