--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -47,6 +47,13 @@
   margin: 0 auto;
 }
 
+.product__image {
+  display: block;
+  width: 140px;
+  height: 144px;
+  margin: 0 auto;
+}
+
 @media (min-width: @table-width) {
   .product {
     position: relative;
@@ -78,6 +85,8 @@
     position: absolute;
     bottom: 320px;
     left: 0;
+    width: 324px;
+    height: auto;
   }
 
   .product__composition {
@@ -100,5 +109,9 @@
 
   .product__button {
     width: 170px;
+  }
+
+  .product__image {
+    width: 245px;
   }
 }
