--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -79,6 +79,12 @@
   text-align: center;
 }
 
+.slider__image {
+  display: block;
+  width: 320px;
+  height: 240px;
+}
+
 @media (min-width: @table-width) {
   .example {
     background-image: linear-gradient(#ffffff 575px, transparent 575px, transparent 100%);
@@ -134,6 +140,11 @@
     line-height: 30px;
     text-align: right;
     text-transform: uppercase;
+  }
+
+  .slider__image {
+    width: 690px;
+    height: 517px;
   }
 }
 
