--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -84,14 +84,13 @@
   width: 25px;
   height: 11px;
 
-  background: url("../img/icon-right-arrow-long.svg") no-repeat 0 50%;
-  transition: all 0.2s ease-out;
+  background: url("../img/icon-right-arrow-verylong.svg") no-repeat 0 50%;
+  transition: all 0.3s ease;
 }
 
 .programs__link:hover::after,
 .programs__link:focus::after {
   width: 32px;
-  background: url("../img/icon-right-arrow-verylong.svg") no-repeat 0 50%;
 }
 
 .programs__link:active {
