--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -26,7 +26,18 @@
   border: 1px solid #dcdcdc;
   border-radius: 7px;
   box-sizing: border-box;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
   cursor: pointer;
+}
+
+.slider__toggle:hover,
+.slider__toggle:focus {
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
+}
+
+.slider__toggle:active {
+  border: 2px solid @light-green;
+  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.3);
 }
 
 .slider__toggle::before {
