--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -7,6 +7,9 @@
 
 @text-color: #111111;
 @line-gray: rgba(205, 205, 205, 0.5);
+@line-hvr: rgba(205, 205, 205, 1);
+@line-active: #444444;
+@line-invalid: #ff8282;
 
 @table-width: 768px;
 @desktop-width: 1220px;
