Добавлена поддержка ретины в раздел advantage

--- a/source/less/blocks/advantage.less
+++ b/source/less/blocks/advantage.less
@@ -51,18 +51,38 @@
 
 .advantage__description--leaf::after {
   background: url("../img/advantage-leaf@1x.png") no-repeat 0 0;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/advantage-leaf@2x.png");
+    background-size: 50px auto;
+  }
 }
 
 .advantage__description--powder::after {
   background: url("../img/advantage-powder@1x.png") no-repeat 0 0;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/advantage-powder@2x.png");
+    background-size: 50px auto;
+  }
 }
 
 .advantage__description--dining::after {
   background: url("../img/advantage-dining@1x.png") no-repeat 0 0;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/advantage-dining@2x.png");
+    background-size: 50px auto;
+  }
 }
 
 .advantage__description--clock::after {
   background: url("../img/advantage-clock@1x.png") no-repeat 0 0;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/advantage-clock@2x.png");
+    background-size: 50px auto;
+  }
 }
 
 @media (min-width: @table-width) {
