--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -97,17 +97,13 @@
   content: "";
   display: block;
   position: relative;
-  top: -40px;
+  top: 15px;
 
   width: 100%;
   height: 3px;
 
   background-color: @light-green;
   z-index: -1;
-}
-
-.form--line-t::before {
-  top: -65px;
 }
 
 .form__info {
@@ -221,10 +217,12 @@
 }
 
 .form__subtitle {
+  display: inline-block;
   position: relative;
   margin-bottom: 30px;
   padding: 0 20px;
   width: auto;
+  vertical-align: baseline;
 
   background-color: #ffffff;
 }
@@ -266,14 +264,13 @@
 
 @media (min-width: @table-width) {
   .form__subtitle {
-    width: auto;
     padding: 0 40px;
     margin-left: 30px;
     margin-bottom: 70px;
   }
 
   .form--line::before {
-    top: -85px;
+    top: 25px;
   }
 
 
@@ -453,10 +450,27 @@
   }
 
   .form__subtitle {
-    width: auto;
-    padding: 0 40px;
-    margin: 0 70px;
+    display: flex;
+    align-items: center;
+    padding: 0;
+    margin: 0 auto;
     margin-bottom: 65px;
+    max-width: 1300px;
+    padding-left: 40px;
+    text-align: left;
+    box-sizing: border-box;
+  }
+
+  .form__subtitle::after {
+    content: "";
+    display: block;
+    flex-grow: 1;
+    margin-top: 11px;
+    margin-left: 40px;
+
+    height: 3px;
+
+    background-color: @light-green;
   }
 
   .form__type {
