--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -44,7 +44,7 @@
 }
 
 .form__text:hover {
-  border: 1px solid @line-hvr;
+  border: 1px solid @line-hover;
 }
 
 .form__text:active,
@@ -194,7 +194,7 @@
 }
 
 .form__label--checkbox:hover::after {
-  border: 1px solid @line-hvr;
+  border: 1px solid @line-hover;
 }
 
 .form__label--checkbox:active {
@@ -240,7 +240,7 @@
 }
 
 .form__text-area:hover {
-  border: 1px solid @line-hvr;
+  border: 1px solid @line-hover;
 }
 
 .form__text-area:active,
