--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -7,7 +7,7 @@
 
 @text-color: #111111;
 @line-gray: rgba(205, 205, 205, 0.5);
-@line-hvr: rgba(205, 205, 205, 1);
+@line-hover: rgba(205, 205, 205, 1);
 @line-active: #444444;
 @line-invalid: #ff8282;
 
