Карта добавлена на все страницы

--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -51,13 +51,14 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-top: -75px;
-  margin-left: -65px;
+  margin-left: -25px;
+  margin-top: -10px;
 
-  width: 124px;
-  height: 106px;
+  width: 45px;
+  height: 52px;
 
   background: url("../img/map-pin.png") no-repeat 0 0;
+  background-size: contain;
 }
 
 .address__map-image {
@@ -99,8 +100,11 @@
   }
 
   .address__map--pin::before {
-    margin-top: -55px;
-    margin-left: -55px;
+    margin-left: -30px;
+    margin-top: -20px;
+
+    width: 90px;
+    height: 102px;
   }
 }
 
@@ -136,8 +140,6 @@
 
   .address__map--pin::before {
     left: auto;
-    right: 320px;
-    margin-top: -50px;
-    margin-left: 0;
+    right: 200px;
   }
 }
