--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -12,12 +12,14 @@
   height: 24px;
 
   background: url("../img/icon-mobile-menu.svg") no-repeat 0 0;
+  // outline: none;
 }
 
 .main-nav__toggle--close {
   width: 18px;
   height: 18px;
   background: url("../img/icon-close.svg") no-repeat 0 0;
+  // outline: none;
 }
 
 @media (min-width: @table-width) {
