--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -258,4 +258,29 @@
     margin-bottom: 0;
     margin-right: 40px;
   }
+
+  .additional__title {
+    display: flex;
+    align-items: center;
+    padding: 0;
+    margin: 0 auto;
+    margin-bottom: 65px;
+    width: auto;
+    max-width: 1300px;
+    padding-left: 40px;
+    text-align: left;
+    box-sizing: border-box;
+  }
+
+  .additional__title::after {
+    content: "";
+    display: block;
+    flex-grow: 1;
+    margin-top: 11px;
+    margin-left: 40px;
+
+    height: 3px;
+
+    background-color: @light-green;
+  }
 }
