--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -52,10 +52,19 @@
 }
 
 @media (max-width: @table-width - 1) {
+  .no-js .site-list {
+    height: 197px;
+    transform: translateY(0);
+  }
+
+  .no-js .site-list__item {
+    display: block;
+    transform: translateX(0);
+  }
+
   .site-list {
     height: 0;
     transform: translateY(-100px);
-    transition: all 0.5s ease;
   }
 
   .site-list--on {
