svg выведены в спрайт

--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -80,12 +80,12 @@
   margin-top: -10px;
 }
 
-.form__text:focus + .form__icon > path,
-.form__text:active + .form__icon > path {
+.form__text:focus + .form__icon,
+.form__text:active + .form__icon {
   fill: @light-green;
 }
 
-.form__text:invalid + .form__icon > path {
+.form__text:invalid + .form__icon {
   fill: @line-invalid;
 }
 
