--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -21,20 +21,16 @@
   font-size: 0;
 }
 
-.social__icon path,
-.social__icon circle {
+.social__icon {
   fill: @dark-gray;
 }
 
-.social__icon:hover path,
-.social__icon:hover circle,
-.social__icon:focus path,
-.social__icon:focus circle {
+.social__icon:hover {
   fill: @light-green;
 }
 
-.social__icon:active path,
-.social__icon:active circle {
+.social__icon:active,
+.social__icon:focus {
   fill: @light-green;
   opacity: 0.3;
 }
