--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -8,12 +8,12 @@
   text-decoration: none;
 }
 
-.copyright__icon path {
+.copyright__icon {
   fill: @dark-gray;
 }
 
-.copyright__link:hover > .copyright__icon path,
-.copyright__link:focus > .copyright__icon path {
+.copyright__link:hover > .copyright__icon,
+.copyright__link:focus > .copyright__icon {
   fill: @light-green;
 }
 
