--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -6,6 +6,11 @@
   .arial-font(16px, 16px);
   color: @dark-gray;
   text-decoration: none;
+  outline: none;
+}
+
+.copyright__link:focus {
+  box-shadow: @outline-green;
 }
 
 .copyright__icon {
