--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -21,10 +21,11 @@
 
 .example__list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   margin: 0;
-  margin-bottom: 35px;
+  margin-bottom: 25px;
   padding: 0;
 
   list-style: none;
@@ -36,6 +37,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 10px;
 
   width: 120px;
   height: 55px;
@@ -100,7 +102,7 @@
   }
 
   .example__list {
-    margin-bottom: 85px;
+    margin-bottom: 75px;
     width: 370px;
   }
 
@@ -176,7 +178,7 @@
   }
 
   .example__list {
-    margin-bottom: 60px;
+    margin-bottom: 50px;
   }
 
   .example__title {
