--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -12,6 +12,11 @@
   text-transform: uppercase;
 }
 
+.product__link:focus {
+  outline: none;
+  box-shadow: @outline-green;
+}
+
 .product__composition {
   border-collapse: collapse;
 }
@@ -52,6 +57,11 @@
   width: 140px;
   height: 144px;
   margin: 0 auto;
+}
+
+.product__image:focus {
+  outline: none;
+  box-shadow: @outline-green;
 }
 
 @media (min-width: @table-width) {
