--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -93,6 +93,11 @@
   width: 32px;
 }
 
+.programs__link:focus {
+  outline: none;
+  box-shadow: @outline-green;
+}
+
 .programs__link:active {
   opacity: 0.3;
 }
