--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -5,6 +5,9 @@
 @dark-green: #5eaa2f;
 @bg-product: #65a93c;
 
+@outline-green: 0 0 5px 2px @light-green;
+@outline-white: 0 0 5px 2px #ffffff;
+
 @text-color: #111111;
 @line-gray: rgba(205, 205, 205, 0.5);
 @line-hover: rgba(205, 205, 205, 1);
