--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -67,7 +67,7 @@
   align-items: flex-end;
   width: 280px;
   height: 290px;
-  background: url("../img/gift-photo-mobile@1x.jpg") no-repeat 0 0;
+  background: @light-green url("../img/gift-photo-mobile@1x.jpg") no-repeat 0 0;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/gift-photo-mobile@2x.jpg");
