--- a/source/less/blocks/advantage.less
+++ b/source/less/blocks/advantage.less
@@ -41,9 +41,9 @@
 .advantage__description::after {
   content: "";
   position: absolute;
-  top: 50%;
+  top: 0;
   left: 5px;
-  margin-top: -25px;
+  margin-top: 3px;
 
   width: 50px;
   height: 50px;
@@ -114,8 +114,8 @@
     width: 245px;
   }
 
-  .advantage__item:nth-child(3),
-  .advantage__item:nth-child(4) {
+  .advantage__item:nth-last-child(1),
+  .advantage__item:nth-last-child(2) {
     margin-bottom: 0;
   }
 
