--- a/source/less/blocks/social-list.less
+++ b/source/less/blocks/social-list.less
@@ -19,6 +19,11 @@
   display: inline-block;
   vertical-align: middle;
   font-size: 0;
+  outline: none;
+}
+
+.social__link:focus {
+  box-shadow: @outline-green;
 }
 
 .social__icon {
@@ -29,8 +34,11 @@
   fill: @light-green;
 }
 
-.social__icon:active,
-.social__icon:focus {
+.social__link:focus > .social__icon {
+  fill: @light-green;
+}
+
+.social__icon:active {
   fill: @light-green;
   opacity: 0.3;
 }
