--- a/source/less/common.less
+++ b/source/less/common.less
@@ -11,3 +11,8 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.js-focus-visible :focus:not(.focus-visible) {
+  outline: none;
+  box-shadow: none;
+}
