--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,6 @@
 @import "normalize.less";
 @import "variables.less";
+@import "common.less";
 @import "mixin.less";
 @import "fonts-style.less";
 @import "blocks/content.less";
@@ -11,7 +12,6 @@
 @import "blocks/site-list.less";
 @import "blocks/page-main.less";
 @import "blocks/product-banner.less";
-@import "blocks/visually-hidden.less";
 @import "blocks/programs.less";
 @import "blocks/advantage.less";
 @import "blocks/example.less";
