--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -29,6 +29,7 @@
 }
 
 .address__map {
+  display: block;
   position: relative;
   margin: 0;
   padding: 0;
@@ -36,11 +37,12 @@
   background-color: @light-gray;
 }
 
-.address__map iframe {
+.address__yandex-map {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
+  height: 100%;
   border: none;
   z-index: 9;
 }
