Правки для достижения соответсвия макету

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -28,6 +28,8 @@
 
 @media (min-width: @table-width) {
   .copyright__icon {
-    margin-left: 25px;
+    margin-left: 20px;
+    width: 27px;
+    height: 34px;
   }
 }
