--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -6,9 +6,7 @@
 }
 
 .page-header__logo {
-  width: 100%;
-  padding-top: 10px;
-  padding-bottom: 15px;
+  padding: 10px 20px 15px 20px;
   border-bottom: 1px solid @line-gray;
 }
 
@@ -18,11 +16,6 @@
   height: 38px;
 }
 
-@media (max-width: @table-width - 1) {
-  .page-header__logo--ml {
-    margin-left: 20px;
-  }
-}
 
 @media (min-width: @table-width) {
   .page-header__wrapper {
@@ -49,9 +42,7 @@
 
 @media (min-width: @desktop-width) {
   .page-header__wrapper {
-    margin: 0 auto;
-    margin-top: 55px;
-    margin-bottom: 75px;
+    margin: 55px auto;
     width: 1220px;
   }
 
