--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -29,7 +29,7 @@
 .page-main__title {
   width: 280px;
   margin: 0 auto;
-  margin-top: 25px;
+  margin-top: 15px;
   margin-bottom: 30px;
 }
 
@@ -54,7 +54,8 @@
   .page-main__title {
     width: auto;
     margin-left: 30px;
-    margin-bottom: 45px;
+    margin-bottom: 20px;
+    margin-top: 0;
   }
 
   .page-main__catalog {
@@ -79,10 +80,6 @@
     width: 1220px;
   }
 
-  .page-main__catalog {
-    margin-bottom: 80px;
-  }
-
   .page-main__form {
     margin: 0 auto;
     margin-bottom: 80px;
@@ -90,7 +87,10 @@
 
   .page-main__title {
     width: 1220px;
-    margin: 0 auto;
-    margin-bottom: 45px;
+    margin: 20px auto;
+  }
+
+  .page-main__catalog {
+    margin-bottom: 80px;
   }
 }
