--- a/source/less/blocks/product-banner.less
+++ b/source/less/blocks/product-banner.less
@@ -5,7 +5,7 @@
 .product-banner__title {
   margin: 0 auto;
   margin-top: 30px;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   max-width: 400px;
   text-align: center;
   line-height: 36px;
@@ -16,7 +16,7 @@
 .product-banner__tagline {
   margin: 0;
   padding: 0;
-  margin-bottom: 25px;
+  margin-bottom: 35px;
 
   .oswald-font-m(14px, 14px);
   text-transform: uppercase;
@@ -33,7 +33,9 @@
 
 .product-banner__button {
   margin: 0 auto;
+  padding: 10px 0;
   width: 280px;
+  font-size: 14px;
 }
 
 .product-banner::before {
@@ -64,8 +66,8 @@
 
   .product-banner__image {
     position: absolute;
-    top: 340px;
-    left: 60px;
+    top: 315px;
+    left: 30px;
     right: 50px;
     width: 709px;
     height: 609px;
@@ -74,8 +76,7 @@
 
   .product-banner__title {
     margin: 0;
-    margin-top: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 35px;
     max-width: 430px;
     line-height: 60px;
     text-align: left;
@@ -83,7 +84,7 @@
   }
 
   .product-banner__tagline {
-    margin-bottom: 45px;
+    margin-bottom: 50px;
     font-size: 20px;
     line-height: 20px;
     text-align: left;
@@ -92,6 +93,9 @@
 
   .product-banner__button {
     margin: 0;
+    padding: 16px 0;
+    width: 245px;
+    font-size: 20px;
   }
 
   .product-banner::before {
@@ -111,12 +115,12 @@
 
   .product-banner__tagline {
     max-width: 430px;
-    margin-bottom: 50px;
+    margin-bottom: 55px;
   }
 
   .product-banner__image {
-    top: 100px;
-    left: 290px;
+    top: 85px;
+    left: 280px;
     width: 552px;
     height: 500px;
   }
