--- a/source/less/blocks/additional.less
+++ b/source/less/blocks/additional.less
@@ -2,13 +2,13 @@
   position: relative;
   width: 280px;
   margin: 0 auto;
-  margin-bottom: 25px;
+  margin-bottom: 35px;
 }
 
 .additional__title--line::before {
   content: "";
   position: absolute;
-  top: 25%;
+  top: 50%;
   right: -20px;
 
   width: 55px;
@@ -20,7 +20,7 @@
 .additional__list {
   margin: 0;
   padding: 0;
-  margin-bottom: 40px;
+  margin-bottom: 35px;
 
   list-style: none;
 }
@@ -46,7 +46,7 @@
 .additional__description {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 12px;
+  margin-bottom: 15px;
 }
 
 .additional__cost {
@@ -102,7 +102,7 @@
 }
 
 .additional-wrapper {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 @media (min-width: @table-width) {
@@ -123,7 +123,7 @@
   }
 
   .additional-wrapper {
-    margin-bottom: 70px;
+    margin-bottom: 75px;
   }
 
   .additional__title {
@@ -132,7 +132,7 @@
     margin: 0;
     padding: 0;
     margin-left: 30px;
-    margin-bottom: 70px;
+    margin-bottom: 80px;
     background: #ffffff;
     text-align: center;
   }
@@ -143,7 +143,7 @@
 
   .additional__name {
     flex-grow: 1;
-    margin-bottom: 20px;
+    margin-bottom: 28px;
     font-size: 20px;
     line-height: 20px;
   }
@@ -161,17 +161,20 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    padding: 25px 40px;
+    padding: 25px 35px;
     border-left: 1px solid @line-gray;
     border-right: 1px solid @line-gray;
   }
 
   .additional__value {
-    margin-right: 50px;
+    margin-right: 55px;
+    text-align: left;
+    width: auto;
   }
 
   .additional__button {
     width: 100%;
+    font-size: 16px;
   }
 
   .additional__gift {
@@ -191,13 +194,13 @@
   .additional__gift-description {
     margin: 0;
     padding: 0;
-    padding-left: 335px;
+    padding-left: 305px;
     text-align: left;
   }
 
   .additional__gift-description::before {
-    top: 0;
-    left: 0;
+    top: -10px;
+    left: -30px;
     margin-left: 0;
   }
 }
@@ -206,6 +209,7 @@
   .additional-wrapper {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 85px;
   }
 
   .additional__list {
@@ -227,14 +231,18 @@
 
   .additional__gift-description {
     padding-left: 0;
-    padding-top: 115px;
+    padding-top: 145px;
     text-align: center;
   }
 
   .additional__gift-description::before {
-    top: 0;
+    top: 25px;
     left: 50%;
     margin-left: -28px;
+  }
+
+  .additional__gift-description br {
+    display: block;
   }
 
   .additional__item {
@@ -257,6 +265,7 @@
   .additional__description {
     margin-bottom: 0;
     margin-right: 40px;
+    width: 285px;
   }
 
   .additional__title {
@@ -264,7 +273,7 @@
     align-items: center;
     padding: 0;
     margin: 0 auto;
-    margin-bottom: 65px;
+    margin-bottom: 80px;
     width: auto;
     max-width: 1300px;
     padding-left: 40px;
