--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -20,7 +20,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  padding: 30px 20px 25px;
+  padding: 35px 20px 25px;
   background-color: @light-gray;
 }
 
@@ -33,8 +33,9 @@
   position: relative;
   margin: 0;
   padding: 0;
-
+  height: 365px;
   background-color: @light-gray;
+  overflow: hidden;
 }
 
 .address__yandex-map {
@@ -65,7 +66,6 @@
 
 .address__map-image {
   display: block;
-  // position: absolute;
   top: 0;
   width: 320px;
   height: 400px;
@@ -75,13 +75,17 @@
 
 @media (min-width: @table-width) {
   .address__wrapper {
-    padding: 70px 70px 60px;
+    padding: 60px 70px;
   }
 
   .address__invite {
     width: 160px;
     font-size: 20px;
     line-height: 25px;
+  }
+
+  .address__invite br {
+    display: block;
   }
 
   .address__text {
@@ -98,6 +102,14 @@
 
   .address__map-image {
     width: 767px;
+    height: 400px;
+  }
+
+  .address__map {
+    display: block;
+    position: relative;
+    margin: 0;
+    padding: 0;
     height: 400px;
   }
 
@@ -119,13 +131,17 @@
     position: absolute;
     padding: 0;
     top: 95px;
-    left: 110px;
-    justify-content: space-around;
+    left: 40px;
+    justify-content: center;
     width: 570px;
     height: 200px;
 
     background-color: #ffffff;
     z-index: 10;
+  }
+
+  .address__invite {
+    margin-right: 95px;
   }
 
   .address__map {
@@ -143,5 +159,9 @@
   .address__map--pin::before {
     left: auto;
     right: 200px;
+  }
+
+  .address__text {
+    text-align: left;
   }
 }
