--- a/source/less/blocks/advantage.less
+++ b/source/less/blocks/advantage.less
@@ -11,7 +11,7 @@
 
 .advantage__item {
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 26px;
   padding-left: 80px;
 }
 
@@ -23,7 +23,7 @@
 }
 
 .advantage--mb {
-  margin-bottom: 40px;
+  margin-bottom: 45px;
 }
 
 .advantage__description::before {
@@ -87,7 +87,7 @@
 
 @media (min-width: @table-width) {
   .advantage {
-    padding-bottom: 105px;
+    padding-bottom: 100px;
     border-bottom: 1px solid @line-gray;
   }
 
@@ -96,12 +96,11 @@
   }
 
   .advantage__title {
-    margin-bottom: 60px;
+    margin-bottom: 70px;
   }
 
   .advantage__list {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     width: 708px;
   }
@@ -109,9 +108,13 @@
 
   .advantage__item {
     margin-bottom: 135px;
-    padding-top: 115px;
+    padding-top: 110px;
     padding-left: 0;
     width: 245px;
+  }
+
+  .advantage__item:nth-child(odd) {
+    margin-right: 140px;
   }
 
   .advantage__item:nth-last-child(1),
@@ -137,8 +140,8 @@
 
   .advantage__item::after {
     position: absolute;
-    top: -28px;
-    right: 10px;
+    top: -30px;
+    right: 0;
 
     .oswald-font-m(281px, 281px);
     color: @light-gray;
@@ -159,5 +162,33 @@
 
   .advantage__item--number:nth-child(4)::after {
     content: "4";
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantage__list {
+    width: 1220px;
+  }
+
+  .advantage__title {
+    margin-bottom: 70px;
+  }
+
+  .advantage__item {
+    margin-bottom: 65px;
+  }
+
+  .advantage {
+    padding-bottom: 0;
+    margin-bottom: 0;
+    border-bottom: none;
+  }
+
+  .advantage__item:nth-child(odd) {
+    margin-right: 0;
+  }
+
+  .advantage__item + .advantage__item {
+    margin-left: 80px;
   }
 }
