--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,6 +1,6 @@
 .button {
   display: block;
-  padding: 15px 0 12px 0;
+  padding: 10px 0;
 
   .oswald-font-m(16px, 18px);
   text-transform: uppercase;
@@ -50,7 +50,7 @@
 
 @media (min-width: @table-width) {
   .button {
-    width: 250px;
+    width: 245px;
     .oswald-font-m(20px, 20px);
     color: #ffffff;
   }
