--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,13 +1,13 @@
 .catalog__list {
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 30px;
   padding: 0;
 
   list-style: none;
 }
 
 .catalog__item {
-  padding-bottom: 25px;
+  padding-bottom: 26px;
   border-bottom: 1px solid @line-gray;
 }
 
@@ -24,7 +24,7 @@
 .catalog__more-title {
   position: relative;
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   padding: 0;
   padding-top: 80px;
   .oswald-font-m(16px, 20px);
@@ -35,7 +35,7 @@
   content: "";
   position: absolute;
   top: 50%;
-  margin-top: -15px;
+  margin-top: -25px;
   left: 50%;
   margin-left: -15px;
 
@@ -53,6 +53,10 @@
   .arial-font(12px, 16px);
 }
 
+.catalog__button {
+  padding: 10px 0;
+}
+
 @media (min-width: @table-width) {
   .catalog__list {
     display: flex;
@@ -63,7 +67,8 @@
   }
 
   .catalog__item {
-    margin-top: 140px;
+    margin-top: 142px;
+    padding-bottom: 0;
     width: 325px;
     height: 430px;
 
@@ -79,17 +84,24 @@
   .catalog__button {
     width: 250px;
     margin: 0 auto;
+    margin-bottom: 40px;
+    padding: 10px 0;
+    font-size: 16px;
     color: @dark-gray;
   }
 
+  .catalog__more {
+    height: 430px;
+  }
+
   .catalog__more-title {
-    padding-top: 200px;
-    margin-bottom: 20px;
+    padding-top: 165px;
+    margin-bottom: 25px;
     .oswald-font-m(20px, 20px);
   }
 
   .catalog__more-subtitle {
-    margin-bottom: 80px;
+    margin-bottom: 95px;
     font-size: 16px;
   }
 
@@ -99,7 +111,7 @@
   }
 
   .catalog__more-title::after {
-    margin-top: -30px;
+    margin-top: -50px;
     margin-left: -30px;
 
     width: 60px;
