--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -10,12 +10,12 @@
 }
 
 .example__title {
-  margin: 30px 0;
+  margin: 20px 0;
 }
 
 .example__text {
   margin-bottom: 25px;
-
+  width: 270px;
   .arial-font(14px, 18px);
 }
 
@@ -53,13 +53,17 @@
 }
 
 .example__value {
-  .arial-font(24px, 24px);
+  display: block;
+  margin: 0;
+  margin-top: 20px;
+  .oswald-font-m(24px, 24px);
+  text-transform: uppercase;
 }
 
 .example__index {
-  position: absolute;
-  bottom: -15px;
-  left: auto;
+  position: relative;
+  bottom: -5px;
+  left: 0;
 
   margin: 0;
   padding: 0;
@@ -78,14 +82,10 @@
   margin-bottom: 35px;
 
   .oswald-font-m(14px, 20px);
+  text-transform: uppercase;
   text-align: center;
 }
 
-.slider__image {
-  display: block;
-  width: 320px;
-  height: 240px;
-}
 
 @media (min-width: @table-width) {
   .example {
@@ -95,6 +95,7 @@
   .example__wrapper {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   .example__slider {
@@ -102,22 +103,29 @@
   }
 
   .example__list {
-    margin-bottom: 75px;
-    width: 370px;
+    margin-bottom: 0;
+    width: 365px;
   }
 
   .example__title {
     margin: 0;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
+  }
+
+  .example__value {
+    font-size: 30px;
+    line-height: 37px;
+    text-transform: uppercase;
   }
 
   .example__description {
     width: 708px;
+    margin-bottom: 80px;
   }
 
   .example__text {
     margin-bottom: 55px;
-    width: 675px;
+    width: 680px;
 
     font-size: 16px;
     line-height: 24px;
@@ -129,10 +137,11 @@
   }
 
   .example__index {
-    bottom: -5px;
     padding: 0 10px;
     width: auto;
     background-color: #ffffff;
+    font-size: 14px;
+    line-height: 14px;
   }
 
   .example__subtitle {
@@ -142,11 +151,6 @@
     line-height: 30px;
     text-align: right;
     text-transform: uppercase;
-  }
-
-  .slider__image {
-    width: 690px;
-    height: 517px;
   }
 }
 
@@ -170,7 +174,7 @@
   .example__description {
     width: 460px;
     margin: 0;
-    margin-right: 110px;
+    margin-right: 135px;
   }
 
   .example__slider {
@@ -178,13 +182,13 @@
   }
 
   .example__list {
-    margin-bottom: 50px;
+    margin-bottom: 45px;
   }
 
   .example__title {
     margin: 0;
-    margin-bottom: 130px;
-    margin-top: 60px;
+    margin-bottom: 140px;
+    margin-top: 65px;
   }
 
   .example__subtitle {
@@ -194,7 +198,7 @@
   }
 
   .example__subtitle span {
-    margin-left: 65px;
+    margin-left: 60px;
   }
 
   .example__text {
