--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -1,6 +1,6 @@
 .form__title {
   margin: 0 auto;
-  margin-bottom: 40px;
+  margin-bottom: 35px;
   width: 280px;
 
   .oswald-font-m(14px, 18px);
@@ -33,7 +33,7 @@
 .form__text {
   width: 170px;
   flex-grow: 1;
-  padding: 14px 12px 15px;
+  padding: 10px 15px 15px;
   margin-left: 15px;
 
   .oswald-font-m(16px, 18px);
@@ -58,7 +58,7 @@
 .form__text[type="email"],
 .form__text[type="tel"] {
   position: relative;
-  padding-right: 45px;
+  padding-right: 35px;
 }
 
 .form__icon {
@@ -67,14 +67,14 @@
 }
 
 .form__icon--mail {
-  right: 20px;
+  right: 15px;
   width: 17px;
   height: 13px;
   margin-top: -6px;
 }
 
 .form__icon--tel {
-  right: 16px;
+  right: 13px;
   width: 20px;
   height: 20px;
   margin-top: -10px;
@@ -96,15 +96,19 @@
 .form-fieldset() {
   margin: 0;
   padding: 0;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   border: none;
 }
 
-.form--line {
+.form__contact--line,
+.form__comment--line,
+.form__add--line {
   position: relative;
 }
 
-.form--line::before {
+.form__contact--line::before,
+.form__comment--line::before,
+.form__add--line::before {
   content: "";
   display: block;
   position: relative;
@@ -239,7 +243,7 @@
 .form__subtitle {
   display: inline-block;
   position: relative;
-  margin-bottom: 30px;
+  margin-bottom: 35px;
   padding: 0 20px;
   width: auto;
   vertical-align: baseline;
@@ -250,7 +254,7 @@
 .form__text-area {
   width: 100%;
   height: 150px;
-  padding: 15px;
+  padding: 10px;
   padding-right: 0;
   border: 1px solid @line-gray;
 
@@ -270,7 +274,7 @@
 
 .form__submit {
   margin: 0 auto;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
   width: 280px;
 }
 
@@ -285,16 +289,18 @@
   .form__subtitle {
     padding: 0 40px;
     margin-left: 30px;
-    margin-bottom: 70px;
+    margin-bottom: 75px;
   }
 
-  .form--line::before {
+  .form__contact--line::before,
+  .form__comment--line::before,
+  .form__add--line::before {
     top: 25px;
   }
 
 
   .form__title {
-    margin: 0;
+    margin-top: 50px;
     margin-left: 70px;
     margin-bottom: 65px;
     width: 345px;
@@ -309,11 +315,13 @@
 
   .form__text {
     padding: 15px 20px;
+    margin-left: 20px;
     font-size: 20px;
     line-height: 20px;
   }
 
   .form__text-area {
+    height: 170px;
     font-size: 20px;
     line-height: 30px;
   }
@@ -331,7 +339,7 @@
   .form__type {
     padding: 25px;
     margin: 0 40px;
-    margin-bottom: 80px;
+    margin-bottom: 70px;
     border: 1px solid @line-gray;
   }
 
@@ -373,11 +381,6 @@
     margin: 0 70px;
   }
 
-  .form__add .form__label {
-    padding: 10px 0 7px;
-    padding-left: 60px;
-  }
-
   .form__label--checkbox::after {
     width: 38px;
     height: 38px;
@@ -396,7 +399,8 @@
   .form__submit {
     margin: 0;
     margin-right: 60px;
-    // margin-left: 70px;
+    padding: 15px 0;
+    width: 285px;
   }
 
   .form__container {
@@ -409,6 +413,19 @@
     flex-wrap: wrap;
     width: 635px;
     margin-left: 70px;
+  }
+
+  .form__add {
+    margin-bottom: 60px;
+  }
+
+  .form__add .form__label {
+    padding: 10px 0 7px;
+    padding-left: 60px;
+  }
+
+  .form__add .form__subtitle {
+    margin-bottom: 55px;
   }
 
   .form__add .form__item {
@@ -425,7 +442,7 @@
     margin-bottom: 35px;
   }
 
-  br {
+  .form__contact br {
     display: none;
   }
 }
@@ -434,19 +451,24 @@
   .form__container {
     display: flex;
     justify-content: space-between;
-    width: 1220px;
+
     margin: 0 auto;
+    margin-bottom: 65px;
+    width: 1220px;
+  }
+
+  .form__info {
+    margin: 0;
+    width: 570px;
+  }
+
+  .form__contact {
+    margin-bottom: 0;
   }
 
   .form__contact .form__item {
     margin: 0;
     padding: 0;
-    width: 570px;
-  }
-
-  .form__info {
-    margin: 0;
-    margin-bottom: 70px;
     width: 570px;
   }
 
@@ -458,9 +480,12 @@
     margin: 0 auto;
   }
 
+  .form__add {
+    margin-bottom: 10px;
+  }
+
   .form__title {
-    margin: 0 auto;
-    margin-bottom: 65px;
+    margin-left: 40px;
     width: 1220px;
   }
 
@@ -473,7 +498,7 @@
     align-items: center;
     padding: 0;
     margin: 0 auto;
-    margin-bottom: 65px;
+    margin-bottom: 75px;
     max-width: 1300px;
     padding-left: 40px;
     text-align: left;
@@ -495,8 +520,7 @@
   .form__type {
     width: 570px;
     margin: 0;
-    margin-bottom: 80px;
-    padding: 21px;
+    padding: 25px;
     box-sizing: border-box;
   }
 
@@ -514,5 +538,13 @@
   .form__add .form__item:not(:last-child) {
     margin-right: 80px;
     margin-bottom: 0;
+  }
+
+  .form__icon--mail {
+    right: 20px;
+  }
+
+  .form__icon--tel {
+    right: 20px;
   }
 }
