--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,5 +1,5 @@
 .page-footer {
-  padding-bottom: 20px;
+  padding-bottom: 30px;
 
   background-color: @light-gray;
 }
@@ -9,7 +9,7 @@
 }
 
 .page-footer__address {
-  margin-bottom: 40px;
+  margin-bottom: 35px;
   background: #ffffff;
 }
 
@@ -20,7 +20,7 @@
 }
 
 .page-footer__social {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .page-footer__copyright {
@@ -28,6 +28,10 @@
 }
 
 @media (min-width: @table-width) {
+  .page-footer {
+    padding-bottom: 40px;
+  }
+
   .page-footer__container {
     display: flex;
     justify-content: space-between;
@@ -52,5 +56,9 @@
 @media (min-width: @desktop-width) {
   .page-footer {
     margin-top: 0;
+  }
+
+  .page-footer__container {
+    margin: 0 40px;
   }
 }
