--- a/source/less/blocks/product.less
+++ b/source/less/blocks/product.less
@@ -1,12 +1,20 @@
-.product__title {
-  display: inline-block;
-  width: 80px;
-  margin-bottom: 12px;
-  vertical-align: middle;
+.product__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 280px;
+  margin: 0 auto;
+}
+
+.product__composition {
+  width: 140px;
+  border-collapse: collapse;
 }
 
 .product__link {
   display: block;
+  width: 80px;
+  margin-bottom: 10px;
   .oswald-font-m(16px, 20px);
   text-decoration: none;
   text-transform: uppercase;
@@ -17,13 +25,7 @@
   box-shadow: @outline-green;
 }
 
-.product__composition {
-  border-collapse: collapse;
-}
-
 .product__item {
-  display: flex;
-  justify-content: space-between;
   margin: 0;
   padding: 0;
   .arial-font(12px, 16px);
@@ -38,18 +40,13 @@
 .product__index {
   margin: 0;
   padding: 0;
-}
-
-.product__wrapper {
-  display: flex;
-  align-items: center;
-  width: 280px;
-  margin: 0 auto;
+  text-align: left;
 }
 
 .product__button {
   width: 280px;
   margin: 0 auto;
+  padding: 10px 0;
 }
 
 .product__image {
@@ -74,6 +71,8 @@
 
   .product__button {
     width: 250px;
+    margin-bottom: 40px;
+    font-size: 16px;
   }
 
   .product__wrapper {
@@ -81,19 +80,23 @@
     width: 250px;
   }
 
-  .product__title {
-    width: 130px;
-    margin-bottom: 20px;
+  .product__link {
+    width: 135px;
     text-align: center;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    .oswald-font-m(20px, 20px);
   }
 
-  .product__link {
-    .oswald-font-m(20px, 20px);
+  .product__value,
+  .product__index {
+    margin: 0;
+    padding: 5px 0 10px;
   }
 
   .product__image {
     position: absolute;
-    bottom: 320px;
+    bottom: 305px;
     left: 0;
     width: 324px;
     height: auto;
@@ -102,11 +105,10 @@
   .product__composition {
     width: 100%;
     margin-bottom: 30px;
-    text-align: center;
   }
 
   .product__item {
-    padding: 5px 0;
+    padding: 5px 0 10px;
     .arial-font(16px, 16px);
     border-bottom: 1px solid @line-gray;
   }
@@ -118,7 +120,10 @@
   }
 
   .product__button {
+    margin-bottom: 40px;
+    padding: 10px 0;
     width: 170px;
+    font-size: 16px;
   }
 
   .product__image {
