--- a/source/less/blocks/product-banner.less
+++ b/source/less/blocks/product-banner.less
@@ -111,6 +111,7 @@
   .product-banner__title {
     width: 530px;
     margin-bottom: 35px;
+    margin-top: 55px;
   }
 
   .product-banner__tagline {
