Поправлена проблема с переполнением

--- a/source/less/blocks/programs.less
+++ b/source/less/blocks/programs.less
@@ -116,6 +116,7 @@
   .programs__title {
     margin-bottom: 20px;
     padding-left: 0;
+    max-width: 300px;
 
     .oswald-font-m(36px, 37px);
   }
