--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -19,59 +19,63 @@
   .arial-font(14px, 18px);
 }
 
+.example__wrapper {
+  max-width: 280px;
+}
+
 .example__list {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
+  flex-wrap: wrap;
 
   margin: 0;
-  margin-bottom: 25px;
   padding: 0;
 
   list-style: none;
 }
 
 .example__item {
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 10px;
-
-  width: 120px;
-  height: 55px;
+  margin-bottom: 20px;
   text-align: center;
+}
+
+.example__value {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  min-width: 125px;
+  height: 100%;
+  padding: 15px;
 
   border: 1px solid #cdcdcd;
   border-radius: 5px;
+  box-sizing: border-box;
+  .oswald-font-m(24px, 24px);
+  text-transform: uppercase;
+  text-align: center;
 }
+
+
+.example__index {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0;
+  margin-top: -10px;
+  padding: 0 10px;
+  width: 80px;
+  background-color: @light-gray;
+  .arial-font(12px, 12px);
+}
+
 
 .example__slider {
   max-width: 320px;
   margin: 0 auto;
-}
-
-.example__value {
-  display: block;
-  margin: 0;
-  margin-top: 20px;
-  .oswald-font-m(24px, 24px);
-  text-transform: uppercase;
-}
-
-.example__index {
-  position: relative;
-  bottom: -5px;
-  left: 0;
-
-  margin: 0;
-  padding: 0;
-
-  width: 80px;
-  .arial-font(12px, 12px);
-
-  background-color: @light-gray;
 }
 
 .example__subtitle {
@@ -95,16 +99,12 @@
   .example__wrapper {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
+    max-width: 100%;
   }
 
   .example__slider {
     max-width: 768px;
-  }
-
-  .example__list {
-    margin-bottom: 0;
-    width: 365px;
   }
 
   .example__title {
@@ -112,7 +112,21 @@
     margin-bottom: 60px;
   }
 
+  .example__list {
+    width: 365px;
+  }
+
+  .example__index {
+    width: auto;
+    background-color: #ffffff;
+    font-size: 14px;
+    line-height: 14px;
+  }
+
   .example__value {
+    min-height: 75px;
+    min-width: 160px;
+    max-width: 180px;
     font-size: 30px;
     line-height: 37px;
     text-transform: uppercase;
@@ -120,7 +134,7 @@
 
   .example__description {
     width: 708px;
-    margin-bottom: 80px;
+    margin-bottom: 60px;
   }
 
   .example__text {
@@ -131,21 +145,9 @@
     line-height: 24px;
   }
 
-  .example__item {
-    width: 160px;
-    height: 70px;
-  }
-
-  .example__index {
-    padding: 0 10px;
-    width: auto;
-    background-color: #ffffff;
-    font-size: 14px;
-    line-height: 14px;
-  }
-
   .example__subtitle {
     margin: 0;
+    margin-top: 10px;
     width: 190px;
     font-size: 20px;
     line-height: 30px;
@@ -174,7 +176,7 @@
   .example__description {
     width: 460px;
     margin: 0;
-    margin-right: 135px;
+    margin-right: 110px;
   }
 
   .example__slider {
@@ -182,7 +184,7 @@
   }
 
   .example__list {
-    margin-bottom: 45px;
+    margin-bottom: 30px;
   }
 
   .example__title {
