--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -416,7 +416,7 @@
   }
 
   .form__add {
-    margin-bottom: 60px;
+    margin-bottom: 25px;
   }
 
   .form__add .form__label {
@@ -430,16 +430,13 @@
 
   .form__add .form__item {
     margin: 0;
+    margin-bottom: 35px;
     padding: 0;
     width: 245px;
   }
 
   .form__add .form__item:nth-child(odd) {
     margin-right: 100px;
-  }
-
-  .form__add .form__item:first-child {
-    margin-bottom: 35px;
   }
 
   .form__contact br {
@@ -451,6 +448,7 @@
   .form__container {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 
     margin: 0 auto;
     margin-bottom: 65px;
@@ -468,12 +466,18 @@
 
   .form__contact .form__item {
     margin: 0;
+    margin-bottom: 10px;
+
     padding: 0;
     width: 570px;
   }
 
   .form__contact .form__label {
     margin: 0;
+  }
+
+  .form__contact .form__container {
+    margin-bottom: 55px;
   }
 
   .form__comment .form__container {
@@ -533,12 +537,12 @@
   .form__wrapper {
     width: 1220px;
     margin: 0 auto;
-    margin-bottom: 60px;
+    margin-bottom: 25px;
   }
 
   .form__add .form__item:not(:last-child) {
     margin-right: 80px;
-    margin-bottom: 0;
+    // margin-bottom: 0;
   }
 
   .form__icon--mail {
